--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-<!DOCTYPE html>
-<html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
-</html>
+---
+layout: default
+title: Shahid Zaka
+---
+
+		<div class="blurb">
+			<h1>Hi there, I'm Shahid Zaka!</h1>
+			<p>I'm learning Javascript <em>home on the web</em>. Don't trust me. <a href="/about">Read more about my life...</a></p>
+		</div> 
