--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
----
-layout: default
-title: Shahid Zaka
----
+<!DOCTYPE html>
+<!-- link to main stylesheet -->
+		<link rel="stylesheet" type="text/css" href="/css/main.css">
+<html>
+<body>
 
-		<div class="blurb">
+<div class="blurb">
 			<h1>Hi there, I'm Shahid Zaka!</h1>
 			<p>I'm learning Javascript <em>home on the web</em>. Don't trust me. <a href="/about">Read more about my life...</a></p>
 		</div> 
+
+</body>
+</html>
