--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 		<div class="container">
     		<div class="blurb">
         		<h1>Hi there, I'm Shahid Zaka!</h1>
-				<p>I'm learning javascript <em> A language of the web</em> on Github. <a href="/about">Read more about my life...</a></p>
+				<p>I'm learning javascript, <em> A language of the web, </em> on Github. <a href="/about">Read more about my life...</a></p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 		<footer>
