--- a/about/index.html
+++ b/about/index.html
@@ -1,1 +1,8 @@
-
+---
+layout: default
+title: Shahid Zaka | about
+---
+<div class="blurb">
+	<h1>Hi there, I'm Shahid Zaka!</h1>
+				<p>This is about section.</p>
+    		</div><!-- /.blurb -->
