--- a/cv/index.html
+++ b/cv/index.html
@@ -1,1 +1,8 @@
-
+---
+layout: default
+title: Shahid Zaka | CV
+---
+<div class="blurb">
+	<h1>Hi there, I'm Shahid Zaka!</h1>
+				<p>This is CV section.</p>
+    		</div><!-- /.blurb -->
