--- a/projects/index.html
+++ b/projects/index.html
@@ -1,1 +1,8 @@
-
+---
+layout: default
+title: Shahid Zaka | projects
+---
+<div class="blurb">
+	<h1>Hi there, I'm Shahid Zaka!</h1>
+				<p>This is projects section.</p>
+    		</div><!-- /.blurb -->
