--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                     </div>
                     <div class="col-lg-2 ml-auto" data-aos="fade-up" data-aos-delay="100">
                         <figure class="img-absolute">
-                            <img src="images/image.png" alt="Image" class="img-fluid">
+                            <img src="images/imnage.png" alt="Image" class="img-fluid">
                         </figure>
                     </div>
                 </div>
