index.html update

--- a/index.html
+++ b/index.html
@@ -75,11 +75,11 @@
                     <div class="col-lg-5 mr-auto mb-5">
                         <div class="mb-5">
                             <span class="section-sub-title d-block">About</span>
-                            <h2 class="section-title">We Value More on Quality and not in Quantity.</h2>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem possimus distinctio ex. Natus totam voluptatibus animi aspernatur ducimus quas obcaecati mollitia quibusdam temporibus culpa dolore molestias blanditiis consequuntur sunt nisi.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem possimus distinctio ex. Natus totam voluptatibus animi aspernatur ducimus quas obcaecati mollitia quibusdam temporibus culpa dolore molestias blanditiis consequuntur sunt nisi.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem possimus distinctio ex. Natus totam voluptatibus animi aspernatur ducimus quas obcaecati mollitia quibusdam temporibus culpa dolore molestias blanditiis consequuntur sunt nisi.</p>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem possimus distinctio ex. Natus totam voluptatibus animi aspernatur ducimus quas obcaecati mollitia quibusdam temporibus culpa dolore molestias blanditiis consequuntur sunt nisi.</p>
+                            <h2 class="section-title">This section is about me.</h2>
+                            <p>I am a web developer with experience in Ruby on Rails, JavaScript, React, and Redux. I'm passionate about problem solving, debugging, and writing clean, semantic code. I'm happiest in that zen-like state when completely immersed in a complex problem. I love working on a team and pair programming.</p>
+                            <p>I am always looking for more opportunities to delve into new languages, frameworks or mathematical concepts.</p>
+                            <p>When not developing amazing apps, I enjoy traveling, outdoor activities, building tiny robots, and reading.   </p>
+                            <p></p>
                         </div>
                         <div class="row">
                             <div class="col-lg-6">
@@ -135,8 +135,8 @@
                 <div class="row">
                     <div class="col-lg-6 mb-5">
                         <span class="section-sub-title d-block">Skills</span>
-                        <h2 class="section-title">The skills developed.</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem possimus distinctio ex. Natus totam voluptatibus animi aspernatur ducimus quas obcaecati mollitia quibusdam temporibus culpa dolore molestias blanditiis consequuntur sunt nisi.</p>
+                        <h2 class="section-title">The ability to do something well; <em>expertise.</em></h2>
+                        <p>the ability to use one's knowledge effectively and readily in execution or performance.</p>
                     </div>
                 </div>
                 <div class="row">
@@ -178,8 +178,8 @@
                 <div class="row">
                     <div class="col-lg-6 mb-5">
                         <span class="section-sub-title d-block">Projects</span>
-                        <h2 class="section-title">Recent Projects</h2>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem possimus distinctio ex. Natus totam voluptatibus animi aspernatur ducimus quas obcaecati mollitia quibusdam temporibus culpa dolore molestias blanditiis consequuntur sunt nisi.</p>
+                        <h2 class="section-title">A specific plan or design.</h2>
+                        <p>An individual or collaborative enterprise that is carefully planned and designed to achieve a particular aim.</p>
                     </div>
                 </div>
             </div>
@@ -234,6 +234,7 @@
                     <div class="col-md-7">
                         <h2 class="section-title mb-3">Contact</h2>
                         <p class="mb-5">Natus totam voluptatibus animi aspernatur ducimus quas obcaecati mollitia quibusdam temporibus culpa dolore molestias blanditiis consequuntur sunt nisi.</p>
+                        <p class="mb-5">Email | Github | Linkedin | Angelist</p>
                        
                     </div>
                 </div>
