index.html updated

--- a/index.html
+++ b/index.html
@@ -187,42 +187,42 @@
                 <div class="service">
                     <div>
                         <span class="flaticon-reload display-4 text-primary mb-4 d-inline-block"></span>
-                        <h3>Auto Reload</h3>
+                        <h3>Twiddler</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem possimus distinctio ex. Natus totam voluptatibus animi aspernatur ducimus quas obcaecati mollitia quibusdam temporibus culpa dolore molestias blanditiis consequuntur sunt nisi.</p>
                     </div>
                 </div>
                 <div class="service">
                     <div>
                         <span class="flaticon-download display-4 text-primary mb-4 d-inline-block"></span>
-                        <h3>Download Videos</h3>
+                        <h3>Web Server</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem possimus distinctio ex. Natus totam voluptatibus animi aspernatur ducimus quas obcaecati mollitia quibusdam temporibus culpa dolore molestias blanditiis consequuntur sunt nisi.</p>
                     </div>
                 </div>
                 <div class="service">
                     <div>
                         <span class="flaticon-monitor display-4 text-primary mb-4 d-inline-block"></span>
-                        <h3>Web Development</h3>
+                        <h3>Web Game</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem possimus distinctio ex. Natus totam voluptatibus animi aspernatur ducimus quas obcaecati mollitia quibusdam temporibus culpa dolore molestias blanditiis consequuntur sunt nisi.</p>
                     </div>
                 </div>
                 <div class="service">
                     <div>
                         <span class="flaticon-chat display-4 text-primary mb-4 d-inline-block"></span>
-                        <h3>24/7 Support</h3>
+                        <h3>Coming Soon...</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem possimus distinctio ex. Natus totam voluptatibus animi aspernatur ducimus quas obcaecati mollitia quibusdam temporibus culpa dolore molestias blanditiis consequuntur sunt nisi.</p>
                     </div>
                 </div>
                 <div class="service">
                     <div>
                         <span class="flaticon-glasses display-4 text-primary mb-4 d-inline-block"></span>
-                        <h3>Research</h3>
+                        <h3>Coming Soon...</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem possimus distinctio ex. Natus totam voluptatibus animi aspernatur ducimus quas obcaecati mollitia quibusdam temporibus culpa dolore molestias blanditiis consequuntur sunt nisi.</p>
                     </div>
                 </div>
                 <div class="service">
                     <div>
                         <span class="flaticon-vector display-4 text-primary mb-4 d-inline-block"></span>
-                        <h3>Creative Design</h3>
+                        <h3>Coming Soon...</h3>
                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem possimus distinctio ex. Natus totam voluptatibus animi aspernatur ducimus quas obcaecati mollitia quibusdam temporibus culpa dolore molestias blanditiis consequuntur sunt nisi.</p>
                     </div>
                 </div>
@@ -233,8 +233,8 @@
                 <div class="row justify-content-center">
                     <div class="col-md-7">
                         <h2 class="section-title mb-3">Contact</h2>
-                        <p class="mb-5">Natus totam voluptatibus animi aspernatur ducimus quas obcaecati mollitia quibusdam temporibus culpa dolore molestias blanditiis consequuntur sunt nisi.</p>
-                        <p class="mb-5">Email | Github | Linkedin | Angelist</p>
+                        <p class="mb-5">To get in touch.</p>
+                        <p class="mb-5"> <a href="mailto:szaka02@gmail.com">Email</a> | <a href="https://www.github.com/szaka">Github</a> | <a href="https://www.linkedin.com/in/szaka/">Linkedin</a> | <a href="https://angel.co/u/szaka">Angelist</a></p>
                        
                     </div>
                 </div>
