--- a/index.html
+++ b/index.html
@@ -2,271 +2,12 @@
 <html lang="en">
 
 <head>
-    <title>Shahid Zaka &mdash; Homepage</title>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link href="https://fonts.googleapis.com/css?family=Muli:300,400,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="fonts/icomoon/style.css">
-    <link rel="stylesheet" href="css/bootstrap.min.css">
-    <link rel="stylesheet" href="css/jquery-ui.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/jquery.fancybox.min.css">
-    <link rel="stylesheet" href="css/bootstrap-datepicker.css">
-    <link rel="stylesheet" href="fonts/flaticon/font/flaticon.css">
-    <link rel="stylesheet" href="css/aos.css">
-    <link rel="stylesheet" href="css/style.css">
+    <title>Shahid Zaka | Home</title>
 </head>
 
-<body data-spy="scroll" data-target=".site-navbar-target" data-offset="300">
-    <div class="site-wrap">
-        <div class="site-mobile-menu site-navbar-target">
-            <div class="site-mobile-menu-header">
-                <div class="site-mobile-menu-close mt-3">
-                    <span class="icon-close2 js-menu-toggle"></span>
-                </div>
-            </div>
-            <div class="site-mobile-menu-body"></div>
-        </div>
-        <header class="site-navbar py-4 js-sticky-header site-navbar-target" role="banner">
-            <div class="container-fluid">
-                <div class="d-flex align-items-center">
-                    <div class="site-logo"><a href="index.html">Shahid Zaka</a></div>
-                    <div>
-                        <nav class="site-navigation position-relative text-right" role="navigation">
-                            <ul class="site-menu main-menu js-clone-nav mr-auto d-none d-lg-block">
-                                <li><a href="#home-section" class="nav-link">Home</a></li>
-                                <li><a href="#about-section" class="nav-link">About</a></li>
-                                <li><a href="#process-section" class="nav-link">Skills</a></li>
-                                <li><a href="#services-section" class="nav-link">Projects</a></li>
-                            </ul>
-                        </nav>
-                    </div>
-                    <div class="ml-auto">
-                        <nav class="site-navigation position-relative text-right" role="navigation">
-                            <ul class="site-menu main-menu site-menu-dark js-clone-nav mr-auto d-none d-lg-block">
-                                <li class="cta"><a href="#contact-section" class="nav-link"><span class="rounded border border-primary">Contact</span></a></li>
-                            </ul>
-                        </nav>
-                        <a href="#" class="d-inline-block d-lg-none site-menu-toggle js-menu-toggle text-black float-right"><span class="icon-menu h3"></span></a>
-                    </div>
-                </div>
-            </div>
-        </header>
-        <div class="intro-section" id="home-section">
-            <div class="container">
-                <div class="row align-items-center">
-                    <div class="col-lg-4 mr-auto" data-aos="fade-up">
-                        <h1>Hello, I'm Shahid Zaka.</h1>
-                        <p class="mb-5">Software engineer, developer, entrepreneur, dreamer, and aspiring learner.</p>
-                    </div>
-                    <div class="col-lg-2 ml-auto" data-aos="fade-up" data-aos-delay="100">
-                        <figure class="img-absolute">
-                            <img src="images/image1.jpg" alt="Image" class="img-fluid">
-                        </figure>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="site-section section-1" id="about-section">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-5 mr-auto mb-5">
-                        <div class="mb-5">
-                            <span class="section-sub-title d-block">About Me</span>
-                            <h2 class="section-title">This section is about me.</h2>
-                            <p>I am a web developer with experience in Ruby on Rails, JavaScript, React, and Redux. I'm passionate about problem solving, debugging, and writing clean, semantic code. I'm happiest in that zen-like state when completely immersed in a complex problem. I love working on a team and pair programming.</p>
-                            <p>I am always looking for more opportunities to delve into new languages, frameworks or mathematical concepts.</p>
-                            <p>When not developing amazing apps, I enjoy traveling, outdoor activities, building tiny robots, and reading. </p>
-                            <p></p>
-                        </div>
-                        <div class="row">
-                            <div class="col-lg-6">
-                                <div class="counter d-flex align-items-start mb-5" data-aos="fade-up" data-aos-delay="">
-                                    <div class="icon-wrap"><span class=" text-primary"></span></div>
-                                    <div class="counter-text">
-                                        <strong></strong>
-                                        <span></span>
-                                    </div>
-                                </div>
-                                <div class="counter d-flex align-items-start" data-aos="fade-up" data-aos-delay="100">
-                                    <div class="icon-wrap"><span class=" text-primary"></span></div>
-                                    <div class="counter-text">
-                                        <strong></strong>
-                                        <span></span>
-                                    </div>
-                                </div>
-                            </div>
-                            <div class="col-lg-6">
-                                <div class="counter d-flex align-items-start mb-5" data-aos="fade-up" data-aos-delay="200">
-                                    <div class="icon-wrap"><span class=" text-primary"></span></div>
-                                    <div class="counter-text">
-                                        <strong></strong>
-                                        <span></span>
-                                    </div>
-                                </div>
-                                <div class="counter d-flex align-items-start" data-aos="fade-up" data-aos-delay="300">
-                                    <div class="icon-wrap"><span class=" text-primary"></span></div>
-                                    <div class="counter-text">
-                                        <strong></strong>
-                                        <span></span>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-6">
-                        <div class="image-absolute-box">
-                            <div class="box" data-aos="fade-up">
-                                <div class="icon-wrap"><span class="flaticon-download"></span></div>
-                                <h3>Resume</h3>
-                                <p>Here is my resume. To access Please, hover & click here: <a href="files/shahid_zaka_resume.pdf">resume</a></p>
-                            </div>
-                            <img src="images/software-dev.jpg" alt="Image" class="img-fluid">
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="site-section section-2" id="process-section">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 mb-5">
-                        <span class="section-sub-title d-block">Skills</span>
-                        <h2 class="section-title">The ability to do something well; <em>expertise.</em></h2>
-                        <p>the ability to use one's knowledge effectively and readily in execution or performance.</p>
-                    </div>
-                </div>
-                <div class="row">
-                    <div class="col-lg-4" data-aos="fade-up" data-aos-delay="">
-                        <div class="process p-3">
-                            <span class="number">01</span>
-                            <div>
-                                <span class="flaticon-glasses display-4 text-primary mb-4 d-inline-block"></span>
-                                <h3>Front End</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem possimus distinctio ex. Natus totam voluptatibus animi aspernatur ducimus quas obcaecati mollitia quibusdam temporibus culpa dolore molestias blanditiis consequuntur sunt nisi.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4" data-aos="fade-up" data-aos-delay="100">
-                        <div class="process p-3">
-                            <span class="number">02</span>
-                            <div>
-                                <span class="flaticon-vector display-4 text-primary mb-4 d-inline-block"></span>
-                                <h3>Back End</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem possimus distinctio ex. Natus totam voluptatibus animi aspernatur ducimus quas obcaecati mollitia quibusdam temporibus culpa dolore molestias blanditiis consequuntur sunt nisi.</p>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
-                        <div class="process p-3">
-                            <span class="number">03</span>
-                            <div>
-                                <span class="flaticon-monitor display-4 text-primary mb-4 d-inline-block"></span>
-                                <h3>Technologies</h3>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem possimus distinctio ex. Natus totam voluptatibus animi aspernatur ducimus quas obcaecati mollitia quibusdam temporibus culpa dolore molestias blanditiis consequuntur sunt nisi.</p>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="site-section bg-light" id="services-section">
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6 mb-5">
-                        <span class="section-sub-title d-block">Projects</span>
-                        <h2 class="section-title">A specific plan or design.</h2>
-                        <p>An individual or collaborative enterprise that is carefully planned and designed to achieve a particular aim.</p>
-                    </div>
-                </div>
-            </div>
-            <div class="owl-carousel nonloop-block-14">
-                <div class="service">
-                    <div>
-                        <span class="flaticon display-4 text-primary mb-4 d-inline-block"></span>
-                        <h3>Twiddler</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem possimus distinctio ex. Natus totam voluptatibus animi aspernatur ducimus quas obcaecati mollitia quibusdam temporibus culpa dolore molestias blanditiis consequuntur sunt nisi.</p>
-                    </div>
-                </div>
-                <div class="service">
-                    <div>
-                        <span class="flaticon display-4 text-primary mb-4 d-inline-block"></span>
-                        <h3>Web Server</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem possimus distinctio ex. Natus totam voluptatibus animi aspernatur ducimus quas obcaecati mollitia quibusdam temporibus culpa dolore molestias blanditiis consequuntur sunt nisi.</p>
-                    </div>
-                </div>
-                <div class="service">
-                    <div>
-                        <span class="flaticon display-4 text-primary mb-4 d-inline-block"></span>
-                        <h3>Web Game</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Rem possimus distinctio ex. Natus totam voluptatibus animi aspernatur ducimus quas obcaecati mollitia quibusdam temporibus culpa dolore molestias blanditiis consequuntur sunt nisi.</p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <div class="site-section" id="contact-section">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-md-7">
-                        <h2 class="section-title mb-3">Contact Me</h2>
-                        <p class="mb-5">To get in touch.</p>
-                        <p class="mb-5"> <a href="mailto:szaka02@gmail.com">Email</a> | <a href="https://www.github.com/szaka">Github</a> | <a href="https://www.linkedin.com/in/szaka/">Linkedin</a> | <a href="https://angel.co/u/szaka">Angelist</a></p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <footer class="footer-section">
-            <div class="container">
-                <div class="row">
-                    <div class="col-md-4">
-                        <h3>About Me</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Porro consectetur ut hic ipsum et veritatis corrupti. Itaque eius soluta optio dolorum temporibus in, atque, quos fugit sunt sit quaerat dicta.</p>
-                    </div>
-                    <div class="col-md-3 ml-auto">
-                        <h3>Links</h3>
-                        <ul class="list-unstyled footer-links">
-                            <li><a href="#">Home</a></li>
-                            <li><a href="#">About</a></li>
-                            <li><a href="#">Skills</a></li>
-                            <li><a href="#">Projects</a></li>
-                        </ul>
-                    </div>
-                    <div class="col-md-4">
-                        <h3>Have a Question(s)?</h3>
-                        <p>San Francisco, California, USA</p>
-                        <p>szaka02@gmail.com</p>
-                    </div>
-                </div>
-                <div class="row pt-5 mt-5 text-center">
-                    <div class="col-md-12">
-                        <div class="border-top pt-5">
-                            <p>
-                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                                Copyright &copy;<script>
-                                document.write(new Date().getFullYear());
-                                </script> All rights reserved | This template is made with <i class="icon-heart" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-                                <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-                            </p>
-                        </div>
-                    </div>
-        </footer>
-    </div> <!-- .site-wrap -->
-    <script src="js/jquery-3.3.1.min.js"></script>
-    <script src="js/jquery-migrate-3.0.1.min.js"></script>
-    <script src="js/jquery-ui.js"></script>
-    <script src="js/popper.min.js"></script>
-    <script src="js/bootstrap.min.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.stellar.min.js"></script>
-    <script src="js/jquery.countdown.min.js"></script>
-    <script src="js/bootstrap-datepicker.min.js"></script>
-    <script src="js/jquery.easing.1.3.js"></script>
-    <script src="js/aos.js"></script>
-    <script src="js/jquery.fancybox.min.js"></script>
-    <script src="js/jquery.sticky.js"></script>
-    <script src="js/main.js"></script>
+<body>
+    <h1>Coming Soon...</h1>
 </body>
 
 </html>
