--- a/index.html
+++ b/index.html
@@ -3,59 +3,11 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Shahid Zaka - Software Engineer</title>
-    <link rel="stylesheet" href="assets/stylesheets/main.css">
-    <link href="https://fonts.googleapis.com/css?family=Raleway&display=swap" rel="stylesheet">
-    <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=yes">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <meta name="HandheldFriendly" content="true">
-
+    <title>Shahid Zaka | Home</title>
 </head>
 
 <body>
-    <!-- Header -->
-    <header class=" primary-header container group">
-        <h1 class="logo">
-            <a href="index.html">Shahid<br>Zaka</a>
-        </h1>
-        <h3 class="tagline">SF &mdash; NY & Remote</h3>
-        <nav class="nav primary-nav">
-            <ul>
-                <li><a href="about.html">About</a></li>
-                <!--
-          -->
-                <li><a href="projects.html">Projects</a></li>
-                <!--
-          -->
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <!-- Hero -->
-    <section class="hero container">
-        <h2>Hello, my name is Shahid Zaka &mdash;<br> Software engineer, developer, entrepreneur, dreamer, and aspiring learner.
-        </h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum consectetur massa ut lacus semper vulputate.</p>
-        <a class="btn btn-alt" href="assets/files/shahid-zaka-resume.pdf">Get Resume</a>
-    </section>
-    <!-- Footer -->
-    <footer class="primary-footer container group">
-        <small>&copy; Shahid Zaka</small>
-        <nav class="nav">
-            <ul>
-                <li><a href="mailto:szaka02@gmail.com">Email</a></li>
-                <!--
-          -->
-                <li><a href="https://www.linkedin.com/in/szaka/">Linkedin</a></li>
-                <!--
-          -->
-                <li><a href="https://github.com/szaka">Github</a></li>
-                <!--
-          -->
-                <li><a href="https://angel.co/u/szaka">Angel List</a></li>
-            </ul>
-        </nav>
-    </footer>
+    <h1>Coming Soon...</h1>
 </body>
 
 </html>
