--- a/404.html
+++ b/404.html
@@ -1,2 +1,68 @@
+<!DOCTYPE html>
+<html lang="en">
 
-# 404 | Page not found
+<head>
+    <meta charset="utf-8">
+    <title>Shahid Zaka - Software Engineer</title>
+    <meta name="description" content="Software Engineer, Full Stack Developer, Frontend, Backend, Developer ">
+    <link rel="stylesheet" href="assets/stylesheets/main.css">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+</head>
+
+<body>
+    <!-- Header -->
+    <header class=" primary-header container group">
+        <h1 class="logo">
+            <a href="index.html">Shahid<br>Zaka</a>
+        </h1>
+        
+        <nav class="nav primary-nav">
+            <ul>
+                <li><a href="about.html">About</a></li>
+                <!--
+          -->
+                <li><a href="projects.html">Projects</a></li>
+                <!--
+          -->
+                <li><a href="contact.html">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+   <!-- Lead -->
+    <section class="row-alt">
+        <div class="lead container">
+            <h1>404</h1>
+            <p>Error! Page not found.</p>
+        </div>
+    </section>
+    <!-- Main content -->
+    <section class="row">
+        <div class="grid">
+
+        </div>
+    </section>
+
+      <!-- Footer -->
+    <footer class="primary-footer container group">
+        <small>&copy; Shahid Zaka</small>
+        <nav class="nav">
+            <ul>
+                <li><a href="mailto:szaka02@gmail.com">Email</a></li>
+                <!--
+          -->
+                <li><a href="https://www.linkedin.com/in/szaka/">Linkedin</a></li>
+                <!--
+          -->
+                <li><a href="https://github.com/szaka">Github</a></li>
+                <!--
+          -->
+                <li><a href="https://angel.co/u/szaka">Angel List</a></li>
+            </ul>
+        </nav>
+    </footer>
+    
+</body>
+
+</html>
