--- a/404.html
+++ b/404.html
@@ -14,12 +14,12 @@
 body {
   display: flex;
   align-items: center;
-  background: #E3F2FD;
+  background: #DFF3E4;
   min-width: 275px;
   height: 100vh;
   margin: 0 10vw;
   overflow: hidden;
-  color: #138FF2;
+  color: 888888;
   font-family: Roboto;
 }
 
@@ -47,20 +47,14 @@ p {
   display: inline-block;
 }
 
-span {
-  display: block;
-  text-transform: uppercase;
-  color: #B9DDFB;
-  letter-spacing: 1.5px;
-  text-align: center;
-}
+
 a {
   display: inline-block;
   padding: .8em 1em;
   margin-right: 1em;
   margin-bottom: 1em;
-  border: 3px solid #B9DDFB;
-  color: #138FF2;
+  border: 3px solid #fff;
+  color: #888;
   font-weight: 500;
   text-transform: uppercase;
   text-decoration: none;
@@ -68,81 +62,9 @@ a {
   position: relative;
   overflow: hidden;
   transition: .3s;
-  &:hover {
-    color: #E3F2FD;
-    &:before {
-      top: 0;
-    }
   }
-  &:before {
-    content: '';
-    background: #138FF2;
-    height: 100%;
-    width: 100%;
-    position: absolute;
-    top: -100%;
-    left: 0;
-    transition: .3s;
-    z-index: -1;
-  }
-}
 
-// BLACKHOLE
 
-$size: 75px;
-$border: $size/15;
-
-.space {
-  width: $size;
-  height: calc(50vh + #{$size/2});
-  border-top-left-radius: $size/2;
-  border-top-right-radius: $size/2;
-  overflow: hidden;
-  margin: calc(50vh - #{$size/2}) auto 0 auto;
-  position: relative;
-  pointer-events: none;
-  -webkit-transform: translateZ(0);
-}
-
-.blackhole {
-  border: $border solid #1674D1;
-  height: $size;
-  width: $size;
-  border-radius: 50%;
-  position: absolute;
-  top: 0;
-  left: 0;
-  &:after {
-    content: '';
-    height: calc(100% + #{$border*2});
-    width: calc(100% + #{$border*2});
-    border: $border solid #1674D1;
-    border-right-color: transparent;
-    border-bottom-color: transparent;
-    border-radius: 50%;
-    position: absolute;
-    top: -$border;
-    left: -$border;
-    z-index: 5;
-    transform: rotate(45deg);
-  }
-}
-
-.ship {
-  height: $size*2;
-  width: $size - $border*4;
-  margin-left: $border*2;
-  background: url("https://cbwconline.com/IMG/Codepen/Space%20Ship.svg") center/contain no-repeat;
-  animation: blackhole 4s infinite linear;
-  position: absolute;
-  bottom: -$size*2;
-}
-
-@keyframes blackhole {
-  to {
-    transform: translateY(-100vh);
-  }
-}
 
 @media (max-width: 600px) {
   body {margin: 0 5vw}
@@ -156,7 +78,7 @@ $border: $size/15;
 <div class="wrapper">
   <h1>Hmm.</h1>
   <p>It seems that you're lost in a perpetual black hole. Let us help guide you out and get you back home.</p>
-  <div class="buttons"><a href="http://szaka.co">home</a><br/><span>Help me out</span></div>
+  <div class="buttons"><a href="http://szaka.co">home</a><br/></div>
 </div>
 <div class="space">
   <div class="blackhole"></div>
