--- a/projects.html
+++ b/projects.html
@@ -40,20 +40,19 @@
     <!-- Main content -->
     <section class="row">
         <div class="grid">
-            <!-- Example Project 
+           <!-- Example Project -->
             <section class="project-desc">
                 <div class="col-1-3">
-                    <h2>Blue Bird</h2>
-                    <p>JavaScript, React & Mean Database</p>
-                    <p>It's a twitter clone. Single page outliner app based loosely on Workflowy built with Node.js, Express.js and Sequelize, and flexible frontend patterns in React and Redux. Focuses on a single-fetch, normalized Redux state and usage
-                        of higher order components.</p>
-                    <p><a href="http://www.thechicagotheatre.com/">Github Repo</a> <br> <a href="http://www.thechicagotheatre.com/">Live Demo</a></p>
+                    <h2>Twiddler</h2>
+                    <p>JavaScript, Html, CSS</p>
+                    <p>It's a twitter clone. Based on using JavaScript, html, and css.</p>
+                    <p><a href="https://github.com/szaka/twiddler">Github Repo</a> <br> <a href="#">Live Demo</a></p>
                 </div>
 
           <div class="project-img col-2-3">
-                    <img src="assets/images/projects/example.gif" alt="Blue Bird">
+                    <img src="assets/images/projects/twiddler.png" alt="Twiddler">
                 </div>
-            </section> -->
+            </section> 
            
         </div>
     </section>
