fixed project img

--- a/projects.html
+++ b/projects.html
@@ -1,55 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="utf-8">
-    <title>Shahid Zaka - Projects</title>
-    <link rel="stylesheet" href="assets/stylesheets/main.css">
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
-</head>
+    <head>
+        <meta charset="utf-8">
+        <title>Shahid Zaka - Projects</title>
+        <link rel="stylesheet" href="assets/stylesheets/main.css">
+        <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
+    </head>
 
-<body>
-    <!-- Header -->
-    <header class=" primary-header container group">
-        <h1 class="logo">
-            <a href="index.html">SHAHID<br>ZAKA</a>
-        </h1>
+    <body>
+
+        <!-- Header -->
+
+        <header class=" primary-header container group">
+
+            <h1 class="logo">
+                <a href="index.html">SHAHID<br>ZAKA</a>
+            </h1>
         
-        <nav class="nav primary-nav">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <!--
-          -->
-                <li><a href="about.html">About</a></li>
-                <!--
-          -->
-                <li><a href="projects.html">Projects</a></li>
-                <!--
-          -->
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-    </header>
-    <!-- Lead -->
-    <section class="row-alt">
-        <div class="lead container">
-            <h1>PROJECTS</h1>
-            <p></p>
-        </div>
-    </section>
-    <!-- Main content -->
-    <section class="row">
-        <div class="grid">
-           <!-- Example Project -->
-            <section class="project-desc">
-                <div class="col-1-3">
-                    <h2>Twiddler</h2>
-                    <p>JavaScript, Html, CSS</p>
-                    <p>It's a twitter clone. Based on using JavaScript, html, and css.</p>
-                    <p><a href="https://github.com/szaka/twiddler">Github Repo</a> <br> <a href="#">Live Demo</a></p>
-                </div>
+            <nav class="nav primary-nav">
+                <ul>
+                    <li><a href="index.html">Home</a></li><!--
+                    --><li><a href="about.html">About</a></li><!--
+                    --><li><a href="projects.html">Projects</a></li><!--
+                    --><li><a href="contact.html">Contact</a></li>
+                </ul>
+            </nav>
 
-          <div class="project-img col-2-3">
+        </header>
+
+        <!-- Lead -->
+
+        <section class="row-alt">
+            <div class="lead container">
+
+                <h1>PROJECTS</h1>
+
+                <p></p>
+
+            </div>
+        </section>
+
+        <!-- Main content -->
+
+        <section class="row">
+            <div class="grid">
+
+                <!-- Example Project -->
+
+                <section class="project-desc">
+
+                    <div class="col-1-3">
+                        <h2>Twiddler</h2>
+                        <p>JavaScript, Html, CSS</p>
+                        <p>It's a twitter clone. Based on using JavaScript, html, and css.</p>
+                        <p><a href="https://github.com/szaka/twiddler">Github Repo</a> <br> <a href="#">Live Demo</a></p>
+                    </div><!--
+
+          --><div class="project-img col-2-3">
                     <img src="assets/images/projects/twiddler.png" alt="Twiddler">
                 </div>
             </section> 
