--- a/projects.html
+++ b/projects.html
@@ -46,9 +46,9 @@
         <section class="row">
             <div class="grid">
 
-                <!-- Example Project -->
+        <!-- Example Project -->
 
-                <section class="project-desc">
+        <section class="project-desc">
 
                     <div class="col-1-3">
                         <h2>Twiddler</h2>
@@ -57,31 +57,27 @@
                         <p><a href="https://github.com/szaka/twiddler">Github Repo</a> <br> <a href="#">Live Demo</a></p>
                     </div><!--
 
-          --><div class="project-img col-2-3">
+                 --><div class="project-img col-2-3">
                     <img src="assets/images/projects/twiddler.png" alt="Twiddler">
-                </div>
-            </section> 
+                    </div>
+        </section> 
            
         </div>
-    </section>
-    <!-- Footer -->
-    <footer class="primary-footer container group">
+        </section>
+
+        <!-- Footer -->
+
+        <footer class="primary-footer container group">
         <small>&copy; Shahid Zaka</small>
-        <nav class="nav">
-            <ul>
-                <li><a href="mailto:szaka02@gmail.com">Email</a></li>
-                <!--
-          -->
-                <li><a href="https://www.linkedin.com/in/szaka/">Linkedin</a></li>
-                <!--
-          -->
-                <li><a href="https://github.com/szaka">Github</a></li>
-                <!--
-          -->
-                <li><a href="https://angel.co/u/szaka">Angel List</a></li>
-            </ul>
-        </nav>
-    </footer>
-</body>
+            <nav class="nav">
+                <ul>
+                    <li><a href="mailto:szaka02@gmail.com">Email</a></li><!--
+                    --><li><a href="https://www.linkedin.com/in/szaka/">Linkedin</a></li><!--
+                    --><li><a href="https://github.com/szaka">Github</a></li><!--
+                    --><li><a href="https://angel.co/u/szaka">Angel List</a></li>
+                </ul>
+            </nav>
+        </footer>
+    </body>
 
 </html>
