--- a/about.html
+++ b/about.html
@@ -1,47 +1,49 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
+  <head>
     <meta charset="utf-8">
     <title>Shahid Zaka - About</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
-</head>
+  </head>
 
-<body>
-    <!-- Header -->
+  <body>
+
+  <!-- Header -->
+
     <header class=" primary-header container group">
-        <h1 class="logo">
-            <a href="index.html">Shahid<br>Zaka</a>
-        </h1>
+      <h1 class="logo">
+        <a href="index.html">Shahid<br>Zaka</a>
+      </h1>
     
-        <nav class="nav primary-nav">
-            <ul>
-                <li><a href="index.html">Home</a></li>
-                <!--
-          -->
-                <li><a href="about.html">About</a></li>
-                <!--
-          -->
-                <li><a href="projects.html">Projects</a></li>
-                <!--
-          -->
-                <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
+      <nav class="nav primary-nav">
+        <ul>
+          <li><a href="index.html">Home</a></li><!--
+          --><li><a href="about.html">About</a></li><!--
+          --><li><a href="projects.html">Projects</a></li><!--
+          --><li><a href="contact.html">Contact</a></li>
+        </ul>
+      </nav>
     </header>
+
     <!-- Lead -->
+
     <section class="row-alt">
         <div class="lead container">
-            <h1>ABOUT</h1>
+          <h1>ABOUT</h1>
             <p></p>
         </div>
     </section>
-    <!-- Main content -->
-    <section class="row">
-        <div class="grid">
 
-            <!-- Shahid Zaka -->
+    <!-- Main content -->
+
+    <section class="row">
+
+    <div class="grid">
+
+    <!-- Shahid Zaka -->
+
             <section class="self">
                 <div class="col-2-3">
                     <h2>Shahid Zaka</h2>
@@ -81,7 +83,8 @@
                 <li><a href="https://angel.co/u/szaka">Angel List</a></li>
             </ul>
         </nav>
+
     </footer>
-</body>
+  </body>
 
 </html>
