update about section

--- a/about.html
+++ b/about.html
@@ -48,7 +48,10 @@
                 <div class="col-2-3">
                     <h2>Shahid Zaka</h2>
                     <h5>Focused on iterative learning</h5>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum consectetur massa ut lacus semper vulputate. Etiam tincidunt placerat urna id lobortis. Interdum et malesuada fames ac ante ipsum primis in faucibus. Curabitur suscipit in magna non consectetur. Ut tincidunt arcu et velit auctor ultrices. Duis sed pretium massa. Maecenas blandit dui ac lobortis tincidunt.</p>
+                    <p>I am a web developer with experience in Ruby on Rails, JavaScript, React, and Redux. I'm passionate about problem solving, debugging, and writing clean, semantic code. I'm happiest in that zen-like state when completely immersed in a complex problem. I love working on a team and pair programming.</p>
+
+                    <p>I am always looking for more opportunities to delve into new languages, frameworks or mathematical concepts.
+                    When not developing amazing apps, I enjoy traveling, outdoor activities, building tiny robots, and reading.</p>
                     
                 </div><!--
 
