--- a/projects.html
+++ b/projects.html
@@ -56,9 +56,18 @@
                         <p>It's a twitter clone. Based on using JavaScript, html, and css.</p>
                         <p><a href="https://github.com/szaka/twiddler">Github Repo</a> <br> <a href="#">Live Demo</a></p>
                     </div><!--
+                --><div class="project-img col-2-3">
+                      <img src="assets/images/projects/twiddler.png" alt="Twiddler">
+                    </div>
 
-                 --><div class="project-img col-2-3">
-                    <img src="assets/images/projects/twiddler.png" alt="Twiddler">
+                    <div class="col-1-3">
+                        <h2>Web Portfolio</h2>
+                        <p>Html, CSS</p>
+                        <p>It's a my personal web portfolio. Based on using html, and css.</p>
+                        <p><a href="https://github.com/szaka/szaka.github.io">Github Repo</a> <br> <a href="https://szaka.co">Live Demo</a></p>
+                    </div><!--
+                --><div class="project-img col-2-3">
+                      <img src="assets/images/projects/szaka.png" alt="szaka">
                     </div>
         </section> 
            
