--- a/404.html
+++ b/404.html
@@ -6,6 +6,15 @@
     <title>Shahid Zaka - 404 Error Page</title>
     <meta name="description" content="Software Engineer, Full Stack Developer, Frontend, Backend, Developer ">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180817833-1"></script>
+    <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+
+    gtag('config', 'UA-180817833-1');
+    </script>
 <style>
     *, :before, :after {
   box-sizing: border-box;
