--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,7 @@
     <title>Shahid Zaka - Contact</title>
     <link rel="stylesheet" href="assets/stylesheets/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180817833-1"></script>
     <script>
