add responsive web code

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
 
       <small>&copy; Shahid Zaka</small>
 
-      <nav class="nav">
+      <nav class="footer-nav">
         <ul>
           <li><a href="mailto:szaka02@gmail.com">Email</a></li><!--
           --><li><a href="https://www.linkedin.com/in/szaka/">Linkedin</a></li><!--
