--- a/404.html
+++ b/404.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8">
     <title>Shahid Zaka - 404 Error Page</title>
     <meta name="description" content="Software Engineer, Full Stack Developer, Frontend, Backend, Developer ">
+    <link rel="icon" type="image/png" href="assets/images/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-180817833-1"></script>
